@@ -84,6 +84,7 @@ CREATE TABLE ART_USERS
 	EMAIL       VARCHAR(40),    
 	ACCESS_LEVEL        INTEGER,
 	DEFAULT_QUERY_GROUP INTEGER,
+	START_QUERY VARCHAR(500),
 	CAN_CHANGE_PASSWORD VARCHAR(1), 
 	ACTIVE_STATUS    VARCHAR(1), 
 	UPDATE_DATE    DATE  
@@ -445,7 +446,8 @@ CREATE TABLE ART_USER_GROUPS
 	USER_GROUP_ID INTEGER NOT NULL PRIMARY KEY,
 	NAME VARCHAR(30) NOT NULL,
 	DESCRIPTION VARCHAR(50),
-	DEFAULT_QUERY_GROUP INTEGER	
+	DEFAULT_QUERY_GROUP INTEGER,
+	START_QUERY VARCHAR(500)
 );
 -- create unique constraints
 ALTER TABLE ART_USER_GROUPS ADD CONSTRAINT art_user_groups_uc_name UNIQUE (NAME);
