@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <!-- General description of ART -->
-    <display-name>ART - ART Reporting Tool</display-name>
+    <display-name>ART - A Reporting Tool</display-name>
     <description>
 	This is an application to perform
 	a wild and wonderful task, based on servlets and jsp.
